# parallel-sparse-tools

./: .coveragerc  .gitignore  .pdm-python  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_7dc0ca09cbb202751b80627e190204e07063f305_20240629_212948.json
.github/workflows/: build.yml  build_wheels.yml  codecov.yml
scripts/: publish.py  publish_test.py
src/parallel_sparse_tools/: _version.py
src/parallel_sparse_tools/expm_multiply_parallel_core/: __init__.py  csr_matvec_core.py  expm_multiply_parallel_core.py  expm_multiply_parallel_wrapper.pyx  generate_source.py
src/parallel_sparse_tools/expm_multiply_parallel_core/source/: csr_matvec.h  csr_utils.h  expm_multiply_parallel.h  expm_multiply_parallel_impl.h  iterators.h  math_functions.h
src/parallel_sparse_tools/matvec/: __init__.py  _ext.cxx  _ext.pyi  _matvec_impl.cxx  _oputils.cxx  _oputils.pyx  generate_oputils.py  impl.py  matvec_core.py
src/parallel_sparse_tools/matvec/_oputils/: complex_ops.h  csc.h  csr.h  csrmv_merge.h  dia.h  matvec.h  matvecs.h  openmp.h  oputils_impl.h  parse_types.h  result.h  utils.h
src/parallel_sparse_tools/matvec/include/: complex_ops.h  csc.h  csr.h  dia.h  openmp.h  osx_omp.h  result.h  runtime.h  utils.h
test/: _test.py  _test_matvec.py  benchmark.py  test.py  test_benchmark.py  test_expm_multiply_parallel.py  test_matvec.py  test_version.py
tests/: test_expm_multiply_parallel.py
