[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-sparse-tools"
version = "0.1.0"
authors = [
    {name = "Phillip Weinberg", email = "weinbe58@gmail.com"},
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "scipy",
]